--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <button (click)="addToAnimals()">Add Animal</button>
     <button (click)="getAll()">Get All</button>
     <button (click)="addItems()">Add Dexie</button>
+    <button (click)="addToHouses()">Add Houses</button>
     <div>
       {{all | json}}
     </div>
