--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <button (click)="addToPeople()">Add People</button>
     <button (click)="addToAnimals()">Add Animal</button>
     <button (click)="getAll()">Get All</button>
-    <button (click)="addItems()">Add Dexie</button>
+    <button (click)="addItems()">Add Dexie Friends</button>
+    <button (click)="addItems2()">Add Dexie ToDos</button>
     <button (click)="addToHouses()">Add Houses</button>
     <div>
       {{all | json}}
